@@ -1,5 +1,7 @@
 *SVN*
 
+* Make sure sqlite3 driver closes open connections on disconnect [Rob Rasmussen]
+
 * [DOC] clear up some ambiguity with the way has_and_belongs_to_many creates the default join table name.  #7072 [jeremymcanally]
 
 * change_column accepts :default => nil. Skip column options for primary keys.  #6956, #7048 [dcmanges, Jeremy Kemper]
